borrar temas en desuso + fix gap

--- a/wp-content/themes/jessicagomez/css/main.css
+++ b/wp-content/themes/jessicagomez/css/main.css
@@ -781,7 +781,8 @@ a:hover::after {
 }
 @media only screen and (max-width: 600px) {
   .p-blog__posts-wrapper {
-    display: block;
+    display: flex;
+    flex-flow: column;
   }
 }
 
