--- a/wp-content/themes/jessicagomez/pages/blog.scss
+++ b/wp-content/themes/jessicagomez/pages/blog.scss
@@ -26,7 +26,8 @@
       grid-template-columns: repeat(2, 1fr);
     }
     @include mixins.BreakpointAndDown("sm") {
-      display: block;
+      display: flex;
+      flex-flow: column;
     }
   }
 }
